--- a/T5small_Tag_Finetune_test.ipynb
+++ b/T5small_Tag_Finetune_test.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -212,12 +212,14 @@
     }
    ],
    "source": [
+    "#Download the dataset\n",
+    "\n",
     "!wget \"https://www.dropbox.com/scl/fi/525gv6tmdi3n32mipo6mr/input.zip?rlkey=5jdsxahphk2ped5wxbxnv0n4y&dl=1\" -O input.zip\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -238,17 +240,21 @@
     }
    ],
    "source": [
+    "#Extract data from the dataset\n",
+    "\n",
     "!unzip input.zip\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "id": "_37YSRB-uM67"
    },
    "outputs": [],
    "source": [
+    "#Import all the necessary libraries\n",
+    "\n",
     "import torch\n",
     "\n",
     "from transformers import (\n",
@@ -262,12 +268,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "id": "4uCN-kvByCPF"
    },
    "outputs": [],
    "source": [
+    "#Defining the constants\n",
+    "#Please note that only 2 epochs has been considered as it is just a test code \n",
+    "\n",
     "MODEL = 't5-small'\n",
     "BATCH_SIZE = 48\n",
     "NUM_PROCS = 16\n",
@@ -278,12 +287,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "id": "p1Gq07tfuDvU"
    },
    "outputs": [],
    "source": [
+    "#Loading the train and validation datasets\n",
+    "\n",
     "dataset_train = load_dataset(\n",
     "    'csv',\n",
     "    data_files='input/train.csv',\n",
@@ -298,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -323,6 +334,7 @@
     }
    ],
    "source": [
+    "\n",
     "print(dataset_train)\n",
     "print(dataset_valid)"
    ]
@@ -352,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -460,12 +472,14 @@
     }
    ],
    "source": [
+    "#Loading the tokenizer\n",
+    "\n",
     "tokenizer = T5Tokenizer.from_pretrained(MODEL)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -606,8 +620,12 @@
    ],
    "source": [
     "# Function to convert text data into model inputs and targets\n",
+    "# Preprocessing step\n",
+    "\n",
+    "\n",
     "def preprocess_function(examples):\n",
     "    inputs = [f\"assign tag: {title} {body}\" for (title, body) in zip(examples['Title'], examples['Body'])]\n",
+    "    #^ creates model inputs by formatting each example as assign tag: title body\n",
     "    model_inputs = tokenizer(\n",
     "        inputs,\n",
     "        max_length=MAX_LENGTH,\n",
@@ -615,7 +633,7 @@
     "        padding='max_length'\n",
     "    )\n",
     "\n",
-    "    # Set up the tokenizer for targets\n",
+    "    # It sets up the tokenizer for targets by cleaning up the tag format\n",
     "    cleaned_tag = [' '.join(''.join(tag.split('<')).split('>')[:-1]) for tag in examples['Tags']]\n",
     "    with tokenizer.as_target_tokenizer():\n",
     "        labels = tokenizer(\n",
@@ -629,6 +647,7 @@
     "    return model_inputs\n",
     "\n",
     "# Apply the function to the whole dataset\n",
+    "#The full dataset is tokenised in parallel using multiple processes\n",
     "tokenized_train = dataset_train.map(\n",
     "    preprocess_function,\n",
     "    batched=True,\n",
@@ -666,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -771,9 +790,14 @@
     }
    ],
    "source": [
+    "\n",
+    "#Load the T5- small model\n",
     "model = T5ForConditionalGeneration.from_pretrained(MODEL)\n",
+    "\n",
+    "#Use GPU where available\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "model.to(device)\n",
+    "\n",
     "# Total parameters and trainable parameters.\n",
     "total_params = sum(p.numel() for p in model.parameters())\n",
     "print(f\"{total_params:,} total parameters.\")\n",
@@ -823,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -926,6 +950,8 @@
    ],
    "source": [
     "from transformers import TrainingArguments\n",
+    "\n",
+    "# Define the training arguments\n",
     "training_args = TrainingArguments(\n",
     "    output_dir=OUT_DIR,\n",
     "    num_train_epochs=EPOCHS,\n",
@@ -936,7 +962,7 @@
     "    logging_dir=OUT_DIR,\n",
     "    logging_steps=10,\n",
     "    eval_steps=500,  # Evaluation every 500 steps\n",
-    "    eval_strategy=\"steps\",  # ✅ MATCHES save_strategy\n",
+    "    eval_strategy=\"steps\",  # Has to MATCH the save_strategy\n",
     "    save_strategy=\"steps\",        # Optional, since this is the default when using `eval_steps`\n",
     "    load_best_model_at_end=True,\n",
     "    save_total_limit=5,\n",
@@ -946,6 +972,7 @@
     "    dataloader_num_workers=4\n",
     ")\n",
     "\n",
+    "#Uses the Hugging Face's Trainer to wrap the model and Train Logic together\n",
     "trainer = Trainer(\n",
     "    model=model,\n",
     "    args=training_args,\n",
@@ -958,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -982,12 +1009,13 @@
     }
    ],
    "source": [
+    "#Saves the tokenizer in the given directory\n",
     "tokenizer.save_pretrained(OUT_DIR)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1024,12 +1052,13 @@
     }
    ],
    "source": [
+    "#Downloads the inference data - the test examples that will be used to test the finetuned model\n",
     "!wget \"https://www.dropbox.com/scl/fi/9brsjizymq5zvqi7hff09/inference_data.zip?rlkey=ukmdy5egmdld80r5hhmsja78v&dl=1\" -O inference_data.zip\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1054,7 +1083,9 @@
     }
    ],
    "source": [
-    "!unzip inference_data.zip\n"
+    "\n",
+    "#Extract the data\n",
+    "!unzip inference_data.zip"
    ]
   },
   {
@@ -1098,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {
     "id": "279Spy7e1vjF"
    },
@@ -1106,6 +1137,7 @@
    "source": [
     "from transformers import T5ForConditionalGeneration, T5Tokenizer\n",
     "\n",
+    "#Based on the results select the checkpoint with the best result which then loads that specific check point of the trained model and its associated tokenizer from the local storage\n",
     "model_path = 'results_t5small/checkpoint-1876/'  # Local checkpoint folder\n",
     "\n",
     "model = T5ForConditionalGeneration.from_pretrained(model_path, local_files_only=True)\n",
@@ -1114,12 +1146,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {
     "id": "qgre3Obr1yvQ"
    },
    "outputs": [],
    "source": [
+    "#It tests the finetuned model on the test data by formatting the new input text, tokenizing it, running the model to predict tags and then decoding the generated sequence.\n",
+    "\n",
     "def do_correction(text, model, tokenizer):\n",
     "    input_text = f\"assign tag: {text}\"\n",
     "    inputs = tokenizer.encode(\n",
@@ -1148,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1651,6 +1685,7 @@
     }
    ],
    "source": [
+    "#It loops over all files in the inference_data and then applies the model, and prints the predicted tags for each example.\n",
     "for file in os.listdir('inference_data/'):\n",
     "    f = open(f\"inference_data/{file}\", 'r')\n",
     "    sentence = f.read()\n",
